bugfix: squash error on deleting node -- the best news in a long time

--- a/style.css
+++ b/style.css
@@ -101,14 +101,11 @@ body {
     background-color: #FFF0F1;
   }
 
-svg {
-
-  }
-  svg.svgraph {
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0;
+svg.svgraph {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
   }
   circle.node:hover {
     cursor: pointer;
